# database-performance

./: .editorconfig  .env.example  .prettierignore  .prettierrc  compose.yml  package-lock.json  package.json
.github/: CODEOWNERS  pull_request_template.md
assets/: console.sql
pgbench/: insert-id-serial.sql  insert-id-ulid-type-base32.sql  insert-id-ulid-type-char.sql  insert-id-ulid-type-uuid.sql  insert-id-uuid-v4-type-char.sql  insert-id-uuid-v4-type-uuid.sql  insert-id-uuid-v7-type-char.sql  insert-id-uuid-v7-type-uuid.sql  run.sh  select-id-serial.sql  select-id-ulid-type-base32.sql  select-id-ulid-type-char.sql  select-id-ulid-type-uuid.sql  select-id-uuid-v4-type-char.sql  select-id-uuid-v7-type-char.sql  select-id-uuid-v7-type-uuid.sql
python/: identifiers.py  pyproject.toml
